# ObjectMorpher-SuperGaussian

./: .gitignore  ADAPTER_PLAN.md  CLAUDE.md  deform_kpt.pickle
ObjectMorpher/: .gitignore  README.md  environment.yml  requirements.txt  sample.glb  userstudy.py
ObjectMorpher/editing/: cam_utils.py  compose_trellis_layered_scene.py  diffusion_prior_finetune.py  edit_gui.py  extract_editable_gaussians.py  fullgui.py  lap_deform.py  layered_background_lifting.py  merge_cat_only_edit.py  merge_layered_scene.py  pixelhacker_inpaint.py  prune_object_by_source_mask.py  (+8 more)
adapter/: README.md  __init__.py  pyproject.toml
adapter/configs/: phase1.example.yaml
adapter/hooks/objectmorpher/: renderer_entrypoint.py
adapter/om_sg_adapter/: __init__.py  config.py  envs.py  paths.py
adapter/om_sg_adapter/cameras/: __init__.py  conventions.py  trajectory.py  transforms_io.py
adapter/om_sg_adapter/cli/: __init__.py  run_compose_layered.py  run_edit_gui.py  run_fit_from_scratch.py  run_kpt_lift.py  run_lifting.py  run_phase1.py  run_sr.py  run_tail_lift.py
adapter/om_sg_adapter/losses/: __init__.py  photometric.py
adapter/om_sg_adapter/om_bridge/: __init__.py  export_pseudo_dataset.py  lift_2d.py  load_gs.py  mask_utils.py  render_frames.py  scene_meta.py
adapter/om_sg_adapter/pipelines/: __init__.py  phase1_optimize_om_against_gt.py  phase1_render_then_upsample.py
adapter/om_sg_adapter/sg_bridge/: __init__.py  run_fitting.py  run_upsampling.py  stage_inputs.py
adapter/scripts/: env_check.sh  run_edit_gui.sh  run_lifting.sh  run_phase1.sh  run_sam.sh  run_tail_lift.sh
(+50 files in other folders)
