[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "om-sg-adapter"
version = "0.1.0"
description = "Adapter scaffold for ObjectMorpher and SuperGaussian"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["om_sg_adapter*"]
